...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/SaveBut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="saveButtonClicked"
                android:text="Save" />

            <Button
                android:id="@+id/DeleteBut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="DeleteButtonClicked"
                android:text="Delete" />

            <Button
                android:id="@+id/CancelBut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cancelButtonClicked"
                android:text="Cancel" />
        </LinearLayout>
...

        <CheckBox
            android:id="@+id/QuirkEditradioButtonSat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sat"
            android:layout_below="@+id/QuirkEditradioButtonMon"
            android:layout_alignStart="@+id/QuirkEditradioButtonMon" />

        <CheckBox
            android:id="@+id/QuirkEditradioButtonSun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="Occurence"
            android:layout_marginEnd="12dp"
            android:textSize="15sp"
            android:layout_below="@+id/QuirkeditTextReason"
            android:layout_alignStart="@+id/QuirkeditTextReason" />

        <EditText
            android:id="@+id/QuirkeditTextReason"
            android:layout_width="match_parent"
            android:layout_height="55dp"
...
            android:id="@+id/textViewReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Reason"
            android:textSize="17sp"
            android:layout_marginEnd="12dp"
            android:layout_below="@+id/QuirkeditTextGoal"
            android:layout_alignStart="@+id/QuirkeditTextGoal"
            android:layout_marginTop="12dp" />

        <TextView
            android:id="@+id/textViewGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="94dp"
            android:textSize="17sp"
            android:text="Goal"
            android:layout_below="@+id/QuirkeditTextTitle"
            android:layout_alignStart="@+id/QuirkeditTextTitle" />

        <EditText
            android:id="@+id/QuirkeditTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/QuirkeditTextType"
            android:layout_below="@+id/QuirkeditTextType"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:layout_marginEnd="12dp"
            android:text="Title" />

...
            android:text="Starting Date"
            android:layout_below="@+id/QuirkeditTextTitle"
            android:layout_alignStart="@+id/QuirkeditTextTitle"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/textViewSelectStartingDateEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/QuirkeditTextTitle"
            android:layout_alignStart="@+id/textViewStartingDateEdit"
            android:layout_below="@+id/textViewStartingDateEdit"
            android:layout_marginTop="13dp"
...
