...
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/navigation" />

    <Button
        android:id="@+id/add_quirk_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_above="@+id/bottom_navigation"
        android:text="New Quirk" />

    <ListView
        android:divider="@android:color/transparent"
        android:dividerHeight="5dp"
        android:id="@+id/quirk_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/add_quirk_button"
        android:layout_below="@id/topbuttons"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
...
